--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
         "type_traits": "cpp",
         "chrono": "cpp",
         "string": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "sstream": "cpp",
+        "ratio": "cpp"
     }
 }
